[package]
name = "quantum-messenger-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
base64 = "0.21"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[lib]
name = "crypto_core"
crate-type = ["cdylib", "rlib"]
