[package]
name = "quantum-messenger-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
redis = "0.25"

[lib]
name = "server"
crate-type = ["rlib"]
